:zap: Fields validation for create user endpoint is working
Additionally run.sh script is added in order to live reload spring app from within container.
Get user request is in progress.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM eclipse-temurin:17-jdk-focal
 
+RUN apt-get update && apt-get -y upgrade
+
+RUN apt-get install -y inotify-tools dos2unix
+
 WORKDIR /app
 
 COPY .mvn/ .mvn
@@ -7,5 +11,13 @@ COPY mvnw pom.xml ./
 RUN ./mvnw dependency:go-offline
 
 COPY src ./src
+RUN ./mvnw clean install
 
-CMD ["./mvn", "spring-boot:run"]
+COPY run.sh ./run.sh
+RUN chmod +x ./run.sh
+CMD ["./mvnw", "spring-boot:run"]
+
+# ENTRYPOINT ["./run.sh"]
+
+# CMD ["sh", "./run.sh"]
+
